# MediCanna-AI

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml  release-cloudrun.yml
backend-rust-gateway/: Cargo.toml  Dockerfile
backend-rust-gateway/src/: handlers.rs  main.rs  models.rs  services.rs
deploy/cloudrun/: deploy.sh
deploy/monitoring/: README.md  alert-policies.yaml  dashboard.json
docs/: release-playbook.md
frontend-angular/: .dockerignore  Dockerfile  angular.json
frontend-angular/docker-entrypoint.d/: 40-gateway-config.sh
frontend-angular/src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.config.ts
frontend-angular/src/app/components/recommendation-list/: recommendation-list.component.html  recommendation-list.component.scss  recommendation-list.component.spec.ts  recommendation-list.component.ts
frontend-angular/src/app/components/strain-card/: strain-card.component.html  strain-card.component.scss  strain-card.component.ts
frontend-angular/src/app/components/symptom-form/: symptom-form.component.html  (+3 more)
frontend-angular/src/app/config/: runtime-config.service.ts
frontend-angular/src/app/models/: strain.interface.ts
frontend-angular/src/app/services/: api.service.ts
frontend-angular/src/assets/: app-config.json
ml-python-engine/: .dockerignore  Dockerfile  bootstrap_models.py  main.py  requirements.txt  train_pipeline.py
ml-python-engine/data/: strains_dataset.csv
ml-python-engine/tests/: test_api.py
scripts/: contract-test.sh  verify-api.sh
